--- a/index.html
+++ b/index.html
@@ -357,10 +357,10 @@
 
                             <div class="card-content">
                                 <h3 class="title-4 card-title">
-                                    <a href="menu.html" style="color: black;">Surprise Cakes</a>
+                                    <a href="product.html" style="color: black;">Surprise Cakes</a>
                                 </h3>
 
-                                  <a href="menu.html" class="btn btn-text hover-underline label-2">
+                                  <a href="product.html" class="btn btn-text hover-underline label-2">
                                     <span class="text text-1">View Menu</span>
                                     <span class="text text-2" aria-hidden="true">View Menu</span>
                                 </a>
@@ -371,7 +371,7 @@
 
                     <li>
                         <div class="service-card">
-                            <a href="menu.html" class="has-before hover:shine">
+                            <a href="product.html" class="has-before hover:shine">
                                 <figure class="card-banner img-holder" style="--width: 285; --height: 336;">
                                     <img src="cake/5.jpeg" width="285" height="336" loading="lazy" alt="Drinks" class="img-cover">
                                 </figure>
@@ -382,7 +382,7 @@
                                     <a href="menu.html"style="color: black;">Chocolate Cakes</a>
                                 </h3>
 
-                                  <a href="menu.html" class="btn btn-text hover-underline label-2">
+                                  <a href="product.html" class="btn btn-text hover-underline label-2">
                                     <span class="text text-1">View Menu</span>
                                     <span class="text text-2" aria-hidden="true">View Menu</span>
                                 </a>
@@ -401,7 +401,7 @@
         <div class="card-wrapper ">
             <ul class="card-list swiper-wrapper">
                 <li class="card-item swiper-slide">
-                    <a href="menu.html" class="card-link">
+                    <a href="product.html" class="card-link">
                         <img src="assets/chocolate.jpg" alt="card image" class="card-image">
                         <p class="badge ">special cake</p>
                         <h2 class="card-title">“A baker is a professional who designs, bakes, and decorates cakes, pastries, and desserts. They use ingredients like flour, sugar, and chocolate.” </h2>
@@ -411,7 +411,7 @@
                     </a>
                 </li>
                 <li class="card-item swiper-slide">
-                    <a href="menu.html" class="card-link">
+                    <a href="product.html" class="card-link">
                         <img src="assets/chocolate.jpg" alt="card image" class="card-image">
                         <p class="badge">special cake</p>
                         <h2 class="card-title">“A baker is a professional who designs, bakes, and decorates cakes, pastries, and desserts. They use ingredients like flour, sugar, and chocolate.”</h2>
@@ -421,7 +421,7 @@
                     </a>
                 </li>
                 <li class="card-item swiper-slide">
-                    <a href="menu.html" class="card-link">
+                    <a href="product.html" class="card-link">
                         <img src="assets/chocolate.jpg" alt="card image" class="card-image">
                         <p class="badge">special cake</p>
                         <h2 class="card-title">“A baker is a professional who designs, bakes, and decorates cakes, pastries, and desserts. They use ingredients like flour, sugar, and chocolate.”</h2>
@@ -431,7 +431,7 @@
                     </a>
                 </li>
                 <li class="card-item swiper-slide">
-                    <a href="menu.html" class="card-link">
+                    <a href="product.html" class="card-link">
                         <img src="assets/chocolate.jpg" alt="card image" class="card-image">
                         <p class="badge">special cake</p>
                         <h2 class="card-title">“A baker is a professional who designs, bakes, and decorates cakes, pastries, and desserts. They use ingredients like flour, sugar, and chocolate.”
@@ -442,7 +442,7 @@
                     </a>
                 </li>
                 <li class="card-item swiper-slide">
-                    <a href="menu.html" class="card-link">
+                    <a href="product.html" class="card-link">
                         <img src="assets/chocolate.jpg" alt="card image" class="card-image">
                         <p class="badge">special cake</p>
                         <h2 class="card-title">“A baker is a professional who designs, bakes, and decorates cakes, pastries, and desserts. They use ingredients like flour, sugar, and chocolate.”</h2>
@@ -540,7 +540,7 @@
 
             <div class="special-dish-banner">
                 
-                <img src="cake/5.jpeg" width="940" height="900" loading="lazy" alt="special dish" class="img-cover" >
+                <img src="assets/Jeyaresh_cake_poster_with_name_crave_and_bites_with_backgro_7e2fd577-7824-4ad9-b7db-824625f690d0.png" width="940" height="900" loading="lazy" alt="special dish" class="img-cover" >
             </div>
 
             <div class="special-dish-content ">
