--- a/index.html
+++ b/index.html
@@ -540,7 +540,7 @@
 
             <div class="special-dish-banner">
                 
-                <img src="assets/Jeyaresh_cake_poster_with_name_crave_and_bites_with_backgro_7e2fd577-7824-4ad9-b7db-824625f690d0.png" width="940" height="900" loading="lazy" alt="special dish" class="img-cover" >
+                <img src="assets/Jeyaresh_cake_poster_with_name_crave_and_bites_with_backgro_7e2fd577-7824-4ad9-b7db-824625f690d0.png" width="940" height="900" loading="lazy" alt="special cake" class="img-cover" >
             </div>
 
             <div class="special-dish-content ">
