--- a/index.html
+++ b/index.html
@@ -891,7 +891,7 @@
                 </div>
 
                 <div class="profile">
-                    <img src="assets/images/testi-avatar.jpg" width="100" height="100" loading="lazy" alt="Sam Jhonson" class="img">
+                    <img src="assets/images/testi-avatar.jpg" width="100" height="100" loading="lazy" alt="Afrin" class="img">
                     <p class="label-2 profile-name">Afrin</p>
                 </div>
             </div>
