--- a/index.html
+++ b/index.html
@@ -110,8 +110,10 @@
     <div class="container">
 
         <a href="#" class="logo">
-           <!-- <img src="assets/crave&bites logo.jpeg" width="160" height="50" alt="Grilli - home">-->
-            <span>Crave & Bites</span>
+            <!-- 
+                <span>Crave & Bites</span>
+                -->
+                <img src="assets/crave n bites.svg" width="160" height="50" alt="Grilli - home">
         </a>
        
        
@@ -1196,9 +1198,9 @@
 
                     <a href="#" class="logo">
                         <!--
-                        <img src="assets/images/logo.svg" width="150" height="50" loading="lazy" alt="Crave n Bites home">
-                        -->
-                        <span>Crave & Bites</span>
+                            <img src="assets/crave n bites.svg" width="150" height="50" loading="lazy" alt="Crave n Bites home">
+                            -->
+                            <span>Crave & Bites</span>
                     </a>
 
                     <address class="body-4">crave & bites, Delicious City, London 9578, UK</address>
