page link update

--- a/index.html
+++ b/index.html
@@ -1247,7 +1247,7 @@
                     </li>
 
                     <li>
-                        <a href="menu.html" class="label-2 footer-link hover-underline">Menus</a>
+                        <a href="product.html" class="label-2 footer-link hover-underline">Menus</a>
                     </li>
 
                     <li>
