alt name update

--- a/index.html
+++ b/index.html
@@ -424,7 +424,7 @@
                 </li>
                 <li class="card-item swiper-slide">
                     <a href="product.html" class="card-link">
-                        <img src="assets/chocolate.jpg" alt="card image" class="card-image">
+                        <img src="assets/chocolate.jpg" alt="card-image" class="card-image">
                         <p class="badge">special cake</p>
                         <h2 class="card-title">“A baker is a professional who designs, bakes, and decorates cakes, pastries, and desserts. They use ingredients like flour, sugar, and chocolate.”</h2>
                         <button class="card-button material-symbols-rounded">
