terms page link

--- a/index.html
+++ b/index.html
@@ -1255,7 +1255,7 @@
                     </li>
 
                     <li>
-                        <a href="#" class="label-2 footer-link hover-underline">Our Chefs</a>
+                        <a href="terms and conditions.html" class="label-2 footer-link hover-underline">Terms & Conditions</a>
                     </li>
 
                     <li>
