--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
                 <li class="navbar-item">
                     <a href="product.html" class="navbar-link hover-underline">
                         <div class="seperator"></div>
-                        <span class="span">menus</span>
+                        <span class="span">cakes</span>
                     </a>
                 </li>
 
@@ -155,18 +155,19 @@
                 </li>
 
                 <li class="navbar-item">
-                    <a href="#chefs" class="navbar-link hover-underline">
+                    <a href="terms and conditions.html" class="navbar-link hover-underline">
                         <div class="seperator"></div>
-                        <span class="span">our chefs</span>
+                        <span class="span">terms and conditions</span>
                     </a>
                 </li>
-
-                <li class="navbar-item">
-                    <a href="#pages" class="navbar-link hover-underline">
-                        <div class="seperator"></div>
-                        <span class="span">pages</span>
-                    </a>
-                </li>
+<!-- 
+    <li class="navbar-item">
+        <a href="#pages" class="navbar-link hover-underline">
+            <div class="seperator"></div>
+            <span class="span">pages</span>
+        </a>
+    </li>
+                 -->
 
                 <li class="navbar-item">
                     <a href="contact.html" class="navbar-link hover-underline">
@@ -1270,7 +1271,7 @@
                     </li>
 
                     <li>
-                        <a href="#" class="label-2 footer-link hover-underline">Instagram</a>
+                        <a href="https://www.instagram.com/crave.n.bites?utm_source=ig_web_button_share_sheet&igsh=MXJqNmJmbjNnOHJxNg==" class="label-2 footer-link hover-underline">Instagram</a>
                     </li>
 
                     <li>
@@ -1295,7 +1296,7 @@
 
             <div class="footer-bottom">
                 <p class="copyright">
-                    &copy; 2025 crave & bites. All Rights Reserved | Crafted by <a href="https://github.com/code" target="_blank" class="link">codeX</a> </p>
+                    &copy; 2025 crave & bites. All Rights Reserved | Crafted by <a href="https://github.com/code" target="_blank" class="link">code X</a> </p>
             </div>
 
 
