--- a/index.html
+++ b/index.html
@@ -594,7 +594,7 @@
                     <li>
                         <div class="menu-card hover:card">
                             <figure class="card-banner img-holder" style="--width: 100; --height: 100;" >
-                                <img src="assets/menu-1.jpeg" width="100" height="100" loading="lazy" alt="greek salad" class="img-cover">
+                                <img src="assets/menu-1.jpeg" width="100" height="100" loading="lazy" alt="cakes" class="img-cover">
                             </figure>
 
                             <div>
@@ -619,7 +619,7 @@
                     <li>
                         <div class="menu-card hover:card">
                             <figure class="card-banner img-holder" style="--width: 100; --height: 100;" >
-                                <img src="assets/menu-1.jpeg" width="100" height="100" loading="lazy" alt="Lasagne" class="img-cover">
+                                <img src="assets/menu-1.jpeg" width="100" height="100" loading="lazy" alt="cakes" class="img-cover">
                             </figure>
 
                             <div>
@@ -644,7 +644,7 @@
                     <li>
                         <div class="menu-card hover:card">
                             <figure class="card-banner img-holder" style="--width: 100; --height: 100;" >
-                                <img src="assets/menu-1.jpeg" width="100" height="100" loading="lazy" alt="Butternut Pumpkin" class="img-cover">
+                                <img src="assets/menu-1.jpeg" width="100" height="100" loading="lazy" alt="cakes" class="img-cover">
                             </figure>
 
                             <div>
