alt name update

--- a/index.html
+++ b/index.html
@@ -669,7 +669,7 @@
                     <li>
                         <div class="menu-card hover:card">
                             <figure class="card-banner img-holder" style="--width: 100; --height: 100;" >
-                                <img src="assets/menu-1.jpeg" width="100" height="100" loading="lazy" alt="Tokusen Wagyu" class="img-cover">
+                                <img src="assets/menu-1.jpeg" width="100" height="100" loading="lazy" alt="cake" class="img-cover">
                             </figure>
 
                             <div>
@@ -694,7 +694,7 @@
                     <li>
                         <div class="menu-card hover:card">
                             <figure class="card-banner img-holder" style="--width: 100; --height: 100;" >
-                                <img src="assets/menu-1.jpeg" width="100" height="100" loading="lazy" alt="Olivas Rellenas" class="img-cover">
+                                <img src="assets/menu-1.jpeg" width="100" height="100" loading="lazy" alt="cake" class="img-cover">
                             </figure>
 
                             <div>
@@ -719,7 +719,7 @@
                     <li>
                         <div class="menu-card hover:card">
                             <figure class="card-banner img-holder" style="--width: 100; --height: 100;" >
-                                <img src="assets/menu-1.jpeg" width="100" height="100" loading="lazy" alt="Opu Fish"class="img-cover">
+                                <img src="assets/menu-1.jpeg" width="100" height="100" loading="lazy" alt="cake"class="img-cover">
                             </figure>
 
                             <div>
