--- a/index.html
+++ b/index.html
@@ -822,7 +822,7 @@
                         <li>
                         <div class="menu-card hover:card">
                             <figure class="card-banner img-holder" style="--width: 100; --height: 100;" >
-                                <img src="assets/menu-1.jpeg" width="100" height="100" loading="lazy" alt="Opu Fish"class="img-cover">
+                                <img src="assets/menu-1.jpeg" width="100" height="100" loading="lazy" alt="cakes"class="img-cover">
                             </figure>
 
                             <div>
