Alt name update

--- a/about.html
+++ b/about.html
@@ -172,7 +172,7 @@
                 <li class="navbar-item">
                     <a href="#chefs" class="navbar-link hover-underline">
                         <div class="seperator"></div>
-                        <span class="span">our chefs</span>
+                        <span class="span">Cakes</span>
                     </a>
                 </li>
 
