--- a/about.html
+++ b/about.html
@@ -6,7 +6,7 @@
 
 <!-- primary meta tags -->
 
-    <title>Crave & Bites - Amazing & Delicious Cakes</title>
+    <title>Crave & Bites - Amazing & Delicious Cakesssd</title>
     <meta name="title" content="Crave & Bites - Amazing & Delicious Cakes" >
     <meta name="description" content="This is a crave & Bites Website developed by....">
 
